--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.gradient {
+    -webkit-text-fill-color: transparent;
+    background-image: url(./assets/brand/gradient.png);
+    background-position: 0 0;
+   
+    background-size: cover;
+    -webkit-background-clip: text;
+    background-clip: text;
+   
+}
+.Button {
+    -webkit-text-fill-color: transparent;
+    background-image: url(./assets/brand/gradient.png);
+    background-position: 0 0;
+    background-size: cover;
+    -webkit-background-clip: text;
+    background-clip: text;
+}
+input:focus {
+    outline: none;
+  }
+  textarea:focus {
+    outline: none;
+  }
+  
