--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -28,3 +28,7 @@ input:focus {
     outline: none;
   }
   
+  .MuiButtonBase-root .MuiListItemButton-root .MuiListItemButton-gutters .MuiListItemButton-root .MuiListItemButton-gutters .css-1vhg0lj-MuiButtonBase-root-MuiListItemButton-root {
+padding: 0;
+
+  }
